<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">SketchIt</string>
    <string name="app_name_viewer">SketchIt - Viewer</string>
    <string name="app_name_settings">SketchIt - Settings</string>

    <string name="title_sketch">Sketch</string>
    <string name="title_album">Album</string>
    <string name="new_sketch">New</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="color">Color</string>
    <string name="start_drawing_question">Start a new drawing?</string>
    <string name="save_drawing_question">Save drawing to the gallery?</string>
    <string name="action">Action</string>
    <string name="ask_delete_selection">Do you really want to delete the selection?</string>
    <string name="sketch_view">Sketch view</string>
    <string name="sketch_saved">Sketch saved.</string>
    <string name="sketch_deleted">%1$s item(s) deleted.</string>
    <string name="settings">Settings</string>
    <string name="delete_all_sketches_hint">You can delete all your sketches at once by clicking the button below.</string>
    <string name="delete_all_sketches">Delete all sketches</string>
    <string name="all_sketches_deleted">All sketches deleted.</string>
    <string name="confirm_delete_all_sketches">Are you sure ?</string>
    <string name="rate">Rate</string>
    <string name="rate_hint">Rate this app and take the occasion to give a feedback :)</string>
    <string name="share_this_app">Share this app to make you friends discover it</string>
    <string name="change_theme_color">You can change the color of the application by selecting another value below</string>
    <string name="more">More</string>
    <string name="new_import">Import</string>
    <string name="import_picture_from">Import picture with</string>
    <string name="pen">Brush</string>
    <string name="style">Style</string>
    <string name="shape">Shape</string>
    <string name="size">Size</string>
    <string name="enable_smooth_drawing_hint">Activate the smooth drawing to make the edges of your features less visible. If you experience slowdowns using this feature, we recommend that you disable it because this can happen on some devices.</string>
    <string name="enable">Enable</string>
    <string name="back_button_undo_hint">Back button undo drawing prior to quit the application</string>

</resources>
